@@ -72,3 +72,4 @@ CB_CONFIG_SUPPORT (cb_acucobol_literals, "acucobol-literals")
 CB_CONFIG_SUPPORT (cb_word_continuation, "word-continuation")
 CB_CONFIG_SUPPORT (cb_not_exception_before_exception, "not-exception-before-exception")
 CB_CONFIG_SUPPORT (cb_accept_display_extensions, "accept-display-extensions")
+CB_CONFIG_SUPPORT (cb_rename_01_and_77, "rename-01-and-77")
