@@ -157,6 +157,7 @@ acucobol-literals:			unconformable
 word-continuation:			ok
 not-exception-before-exception:		unconformable
 accept-display-extensions:		unconformable
+rename-01-and-77:			unconformable
 
 # If yes, all the reserved words must be specified in a list of reserved:
 # entries; the default reserved word list will not be used.
